Improve responsiveness of SetupPage and fix hover effect on mobile

--- a/src/components/characterCard/styles.module.scss
+++ b/src/components/characterCard/styles.module.scss
@@ -26,21 +26,19 @@ $goodColor: #43839a;
 
   &:hover {
     scale: 1.02;
-
-    .image {
-      transform: scale(1.1);
-    }
   }
 }
 
 .active {
   filter: unset;
   // border-width: 0;
+
+  .image {
+    transform: scale(1.1);
+  }
 }
 
 .good {
-  // border: 1px solid $goodColor;
-  // background-color: $goodColor;
   background: rgb(55, 80, 89);
   background: radial-gradient(
     circle,
@@ -56,7 +54,6 @@ $goodColor: #43839a;
 }
 
 .evil {
-  // border: 1px solid $evilColor;
   background-color: $evilColor;
 
   background: rgb(176, 125, 74);
@@ -82,14 +79,16 @@ $goodColor: #43839a;
     transition: transform 0.2s;
   }
 
-  .name {
+  .info {
     position: absolute;
-    bottom: vars.$spacing-tertiary;
-    left: vars.$spacing-secondary;
-    right: vars.$spacing-secondary;
-    z-index: 2;
-    text-align: center;
-    font-size: vars.$font-size-body2;
+    bottom: 0;
+    padding-bottom: vars.$spacing-tertiary;
+
+    .name {
+      z-index: 2;
+      text-align: center;
+      font-size: vars.$font-size-body2;
+    }
   }
 }
 
@@ -113,13 +112,13 @@ $goodColor: #43839a;
     height: 100%;
     padding: vars.$spacing-primary;
     z-index: 2;
-  }
 
-  .name {
-    z-index: 2;
-    text-align: center;
-    font-size: vars.$font-size-h2;
-    margin-bottom: vars.$spacing-tertiary;
+    .name {
+      z-index: 2;
+      text-align: center;
+      font-size: vars.$font-size-h2;
+      margin-bottom: vars.$spacing-tertiary;
+    }
   }
 
   .description {
