--- a/src/layouts/mainLayout/styles.module.scss
+++ b/src/layouts/mainLayout/styles.module.scss
@@ -1,6 +1,7 @@
 .container {
   align-items: center;
-  // max-width: 800px;
+  align-self: center;
+  max-width: 800px;
   height: 100%;
   width: 100%;
   // gap: vars.$spacing-primary;
